--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=SWP391
 
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/wp391
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/swp391
+spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
