--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=SWP391
-
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/swp391
+
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:45583/railway
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=NFAZjmsVlNbOJIXxyrACVEinVXTHVZfF
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
