--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.mail.password=tciw skmo qqop lele
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+server.port=8081
+
 spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=199964582280-qf71d9hlq4c720co6i8po5d2vu0clcus.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
@@ -21,3 +23,10 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 recaptcha.siteKey=6LciZqApAAAAAOULYxe_lEOrY7dQ47gjli-TpYBo
 recaptcha.secretKey=6LciZqApAAAAAD9nZrbBZqaTO5UypGFqzLO0_ZlT
 recaptcha.url=https://www.google.com/recaptcha/api/siteverify
+
+twilio.accountSID=AC46ad6b29c236615d686d773c4dd29f9b
+twilio.authToken=123cf80af85a8ea80e726b0de4479531
+twilio.phoneNumber=+17372521057
+
+
+#logging.level.root=DEBUG
