--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=SWP391
 
-#spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:45583/railway
-#spring.datasource.username=root
-#spring.datasource.password=NFAZjmsVlNbOJIXxyrACVEinVXTHVZfF
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=jdbc:mysql://localhost:3306/diamond_shop_testv1
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:45583/railway
 spring.datasource.username=root
-spring.datasource.password=112003
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.datasource.password=NFAZjmsVlNbOJIXxyrACVEinVXTHVZfF
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/diamond_shop_testv1
+#spring.datasource.username=root
+#spring.datasource.password=112003
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
