Sơn Hà [ADD] add property for login facebook

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+
+#send mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hoangsonhadiggory@gmail.com
@@ -22,10 +24,18 @@ spring.mail.password=tciw skmo qqop lele
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#login google
 spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=199964582280-qjpcdrgg5hca8cr91ian0ru3aef1ulte.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+#login facebook
+spring.security.oauth2.client.registration.facebook.client-name=facebook
+spring.security.oauth2.client.registration.facebook.client-id=1149933542880208
+spring.security.oauth2.client.registration.facebook.client-secret=3702bfea20fcef39700480798a065733
+#spring.security.oauth2.client.registration.facebook.scope=email,profile
+#spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture
 
 
 #recaptcha
