Sơn Hà [UPDATE] update function login over 5 times log account, update function login facebook

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.security.oauth2.client.registration.facebook.client-name=facebook
 spring.security.oauth2.client.registration.facebook.client-id=1149933542880208
 spring.security.oauth2.client.registration.facebook.client-secret=3702bfea20fcef39700480798a065733
 #spring.security.oauth2.client.registration.facebook.scope=email,profile
-#spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture
 
 
 #recaptcha
