--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,14 @@ spring.datasource.password=NFAZjmsVlNbOJIXxyrACVEinVXTHVZfF
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
+#spring.datasource.username=diamondshop
+#spring.datasource.password=Group6123456789
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/diamond_shop_testv1
 #spring.datasource.username=root
 #spring.datasource.password=112003
