--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
+server.port=8081
+
 #send mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
