--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,24 @@
             <version>2.6.0</version>
         </dependency>
 
+        <!-- swagger -->
+
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+<!--            <scope>test</scope>-->
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
