--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,24 @@ spring.application.name=SWP391
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
+#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
+#spring.datasource.username=diamondshop
+#spring.datasource.password=Group6123456789
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
 spring.datasource.username=diamondshop
 spring.datasource.password=Group6123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#server.port=8081
+#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
+#spring.datasource.username=diamondshop
+#spring.datasource.password=Group6123456789
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 
 
