Nghia [Update] update cartcontrollerv2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
 spring.application.name=SWP391
 
-#spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:45583/railway
-#spring.datasource.username=root
-#spring.datasource.password=NFAZjmsVlNbOJIXxyrACVEinVXTHVZfF
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
 #spring.datasource.username=diamondshop
@@ -18,12 +13,7 @@ spring.datasource.password=Group6123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#server.port=8081
-#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
-#spring.datasource.username=diamondshop
-#spring.datasource.password=Group6123456789
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.hibernate.ddl-auto=update
+server.port=8081
 
 
 
