--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,12 @@ spring.datasource.password=Group6123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/diamondshop
+#spring.datasource.username=root
+#spring.datasource.password=12345
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
 #server.port=8081
 #spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
 #spring.datasource.username=diamondshop
