--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
-#server.port=8081
+server.port=8081
 #spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
 #spring.datasource.username=diamondshop
 #spring.datasource.password=Group6123456789
