Sơn Hà [ADD] add Application Insights to log in Azure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 
 
+# Application Insights Instrumentation Key (Ghi log)
+azure.application-insights.instrumentation-key=6696c578-8ffc-4e37-a749-f68055fe97cd
+
 #send mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
