Sơn Hà [UPDATE] Update refund function with paypal and log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,6 +63,15 @@ paypal.api.username=sb-ofpok30993313_api1.business.example.com
 paypal.api.password=WPX3KCT78GFKPC28
 paypal.api.signature=ASXdDrlbTVyCpgzeV32eDNNYww9lAj8Rd4UEf1K0SfIJPhDqN3QpS28A
 
+#VnPay
+vnpay.vnp_PayUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.vnp_ReturnUrl=https://diamondshopgroup6.azurewebsites.net/payment/vnpaysuccess
+vnpay.vnp_TmnCode=SI5BU0OD
+vnpay.secretKey=GFGOXQ59UQLJL7FUWBXAL3L3V7B0010I
+vnpay.vnp_ApiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+
+
+
 #sb-inq8630978130@personal.example.com
 #Group6123456789
 
