--- a/.github/workflows/main_diamondshopgroup6.yml
+++ b/.github/workflows/main_diamondshopgroup6.yml
@@ -5,58 +5,75 @@ name: Build and deploy JAR app to Azure Web App - diamondshopgroup6
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, master ]
   workflow_dispatch:
+
+env:
+  WEBAPP: your-webapp-name
+  GROUP: your-resource-group-name
+  ACCOUNT: name-for-storage-acct  # Does not have to exist, this will be created for you
+  CONTAINER: name-for-storage-container
+  EXPIRY_TIME: 10 minutes
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Java version
-        uses: actions/setup-java@v1
-        with:
-          java-version: '17'
-
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
-
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: java-app
+    - uses: actions/checkout@v2
+    
+    - name: Set up JDK 17
+      uses: actions/setup-java@v1
+      with:
+        java-version: 17
+        
+    - name: Build with Maven
+      run: mvn package
       
-      - name: Login to Azure
+    - name: Upload artifact for deployment jobs
+      uses: actions/upload-artifact@v2
+      with:
+        name: app
+        path: target/app.jar
+  
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Azure Login
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_501593DE1C2B45DF85933351F91878EA }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2239E64749AD4EEFB473433F55966DDF }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_85D436EE7E7B40FEB874FFB211706DD0 }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          
+      - name: Download artifact
+        uses: actions/download-artifact@v2
         with:
-          app-name: 'diamondshopgroup6'
-          slot-name: 'Production'
-          package: '*.jar'
+          name: app
+      
+      - name: Zip the app contents
+        uses: papeloto/action-zip@v1
+        with:
+          files: app.jar
+          dest: app.zip
+
+      - name: Set SAS token expiration
+        run: echo "expiry=`date -u -d "$EXPIRY_TIME" '+%Y-%m-%dT%H:%MZ'`" >> $GITHUB_ENV
+
+      - name: Azure CLI script
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.19.1
+          inlineScript: |
+            az extension add --name webapp
+
+            az storage account create   -n $ACCOUNT   -g $GROUP -l westus
+            az storage container create -n $CONTAINER --account-name $ACCOUNT
+            az storage blob upload      -f app.zip    --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT
+
+            ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{ env.expiry }} --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT | xargs)
+
+            az webapp deploy --name $WEBAPP --resource-group $GROUP --type zip --src-url  $ZIP_URL --async false
+
+            az storage container delete -n $CONTAINER --account-name $ACCOUNT 
           
