--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,7 +66,7 @@ paypal.client.secret=ELLltihyQYQO9blXylsSC9EmQSjzY8cJGcrBAIBAr_wqeCJ5IzsrJ7fzFbB
 
 #VnPay
 vnpay.vnp_PayUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-vnpay.vnp_ReturnUrl=https://diamondshopgroup6.azurewebsites.net/payment/vnpaysuccess
+vnpay.vnp_ReturnUrl=https://diamondshopproject.azurewebsites.net/payment/vnpaysuccess
 vnpay.vnp_TmnCode=SI5BU0OD
 vnpay.secretKey=GFGOXQ59UQLJL7FUWBXAL3L3V7B0010I
 vnpay.vnp_ApiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
