--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,5 @@
 spring.application.name=SWP391
 
-#spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:45583/railway
-#spring.datasource.username=root
-#spring.datasource.password=NFAZjmsVlNbOJIXxyrACVEinVXTHVZfF
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/diamondshop
-#spring.datasource.username=diamondshop
-#spring.datasource.password=Group6123456789
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
 spring.datasource.username=diamondshop
 spring.datasource.password=Group6123456789
@@ -47,8 +35,7 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.facebook.client-name=facebook
 spring.security.oauth2.client.registration.facebook.client-id=1149933542880208
 spring.security.oauth2.client.registration.facebook.client-secret=3702bfea20fcef39700480798a065733
-#spring.security.oauth2.client.registration.facebook.scope=email,profile
-spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
 
 #recaptcha
 recaptcha.siteKey=6LciZqApAAAAAOULYxe_lEOrY7dQ47gjli-TpYBo
