--- a/.github/workflows/main_diamondshopproject.yml
+++ b/.github/workflows/main_diamondshopproject.yml
@@ -31,7 +31,7 @@ jobs:
           path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
