Sơn Hà [UPDATE] test login google on server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.security.oauth2.client.registration.facebook.client-name=facebook
 spring.security.oauth2.client.registration.facebook.client-id=1149933542880208
 spring.security.oauth2.client.registration.facebook.client-secret=3702bfea20fcef39700480798a065733
 spring.security.oauth2.client.registration.facebook.scope=email,public_profile
-spring.security.oauth2.client.registration.facebook.redirect-uri=https://diamondshopproject.azurewebsites.net/login/oauth2/code/facebook
+spring.security.oauth2.client.registration.facebook.redirect-uri=https://diamond-6401b.web.app/login/oauth2/code/facebook/
 
 #recaptcha
 recaptcha.siteKey=6LciZqApAAAAAOULYxe_lEOrY7dQ47gjli-TpYBo
@@ -63,6 +63,5 @@ vnpay.vnp_ApiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 
 #sb-inq8630978130@personal.example.com
 #Group6123456789
-
 
 #logging.level.root=DEBUG
