Sơn Hà [UPDATE] update response return and fix payment to set status product when user refund

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
+
+
+#url redirect frontend
+frontend.url=https://diamond-6401b.web.app/
+
 # Application Insights Instrumentation Key (Ghi log)
 azure.application-insights.instrumentation-key=f427221b-bfaf-44cc-9eec-d4d0f8e4c2fd
 
@@ -58,6 +63,7 @@ vnpay.vnp_ReturnUrl=https://diamondshopproject.azurewebsites.net/payment/vnpaysu
 vnpay.vnp_TmnCode=SI5BU0OD
 vnpay.secretKey=GFGOXQ59UQLJL7FUWBXAL3L3V7B0010I
 vnpay.vnp_ApiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+
 
 
 
