Sơn Hà [ADD UPDATE] add  third job to crawl the price of dola - update payment with paypal, vnpay, change some logic in several classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 
 
+#priceeOfDola
+price.dolar=
 
 #url redirect frontend
 frontend.url=https://diamond-6401b.web.app/
