--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,7 @@ spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=478830836024-e2fa5s2erqeal7bupi7tim4ap64d0cha.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
-#spring.security.oauth2.client.registration.google.redirect-uri=https://diamond-6401b.web.app/login/oauth2/code/google/
-
+#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google/
 
 #login facebook
 spring.security.oauth2.client.registration.facebook.client-name=facebook
