Sơn Hà [UPDATE] update order

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,23 @@
 spring.application.name=SWP391
 
-spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
-spring.datasource.username=diamondshop
-spring.datasource.password=Group6123456789
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/test
-#spring.datasource.username=root
-#spring.datasource.password=12345
+#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
+#spring.datasource.username=diamondshop
+#spring.datasource.password=Group6123456789
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/railway
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 #priceeOfDola
 price.dolar=
 
 #url redirect frontend
-frontend.url=https://diamond-6401b.web.app/
+frontend.url=http://localhost:5173/don-hang
 
 # Application Insights Instrumentation Key (Ghi log)
 azure.application-insights.instrumentation-key=f427221b-bfaf-44cc-9eec-d4d0f8e4c2fd
