--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,14 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/diamondlocal
+#spring.datasource.username=root
+#spring.datasource.password=Nghia_2003
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
+
+#server.port=8081
 #priceeOfDola
 price.dolar=
 
