Sơn Hà [UPDATE] place variable in application.properties and update project in some classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=SWP391
 
-spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
-spring.datasource.username=diamondshop
-spring.datasource.password=Group6123456789
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/railway
-#spring.datasource.username=root
-#spring.datasource.password=123456789
+#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
+#spring.datasource.username=diamondshop
+#spring.datasource.password=Group6123456789
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/railway
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 #jwt
@@ -30,6 +30,8 @@ job.third.minute=30
 #priceOfDola
 price.dolar=
 
+#Devide to get point
+devide.point=100000000
 
 #url redirect frontend
 frontend.url=http://localhost:5173/don-hang
@@ -58,12 +60,12 @@ mail.title.resetPassword=Please verify your resetting password
 mail.senderName.resetPassword=Group6
 
 #send mail to care user offline
-mail.title.offline=Ch?m sóc khách hàng
-mail.senderName.offline=Auto notification
+mail.title.offline=Customer Service
+mail.senderName.offline=Auto Notification
 
-#send mail to happy birth day
+#send mail to happy birthday
 mail.title.happyBirthDay=Happy Birth Day
-mail.senderName.happyBirthDay=Auto notification
+mail.senderName.happyBirthDay=Auto Notification
 
 #send mail invoice
 mail.title.invoice=Invoice
@@ -141,7 +143,7 @@ excel.startRowData=1
 
 #Crawl data
 crawl.data.url=https://google.com
-crawl.data.sendKeys=giá dola ngày hôm nay
+crawl.data.sendKeys=giá_vàng_hôm_nay
 crawl.data.elementIDSearch=APjFqb
 crawl.data.elementGetText=//span[@class='DFlfde SwHCTb']
 
