Sơn Hà [UPDATE] update project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -143,7 +143,7 @@ excel.startRowData=1
 
 #Crawl data
 crawl.data.url=https://google.com
-crawl.data.sendKeys=giá_vàng_hôm_nay
+crawl.data.sendKeys=price dola to vietnam dong
 crawl.data.elementIDSearch=APjFqb
 crawl.data.elementGetText=//span[@class='DFlfde SwHCTb']
 
