--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=SWP391
 
-#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
-#spring.datasource.username=diamondshop
-#spring.datasource.password=Group6123456789
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=jdbc:mysql://localhost:3306/railway
-spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
+spring.datasource.username=diamondshop
+spring.datasource.password=Group6123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/railway
+#spring.datasource.username=root
+#spring.datasource.password=123456789
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 
 #jwt
@@ -26,7 +26,6 @@ swagger.scheme=Bearer
 swagger.format=JWT
 swagger.dev.url=http://localhost:8080/
 swagger.pro.url=https://diamondshopproject.azurewebsites.net/
-
 
 
 #job run
