Sơn Hà [UPDATE] change resource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ price.dolar=
 devide.point=100000000
 
 #url redirect frontend
-frontend.url=http://localhost:5173/don-hang
+frontend.url=https://diamond-6401b.web.app/don-hang
 
 
 # Application Insights Instrumentation Key (Ghi log)
