Sơn Hà [UPDATE] update PaymentController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=SWP391
 
-spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
-spring.datasource.username=diamondshop
-spring.datasource.password=Group6123456789
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/railway
-#spring.datasource.username=root
-#spring.datasource.password=123456789
+#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
+#spring.datasource.username=diamondshop
+#spring.datasource.password=Group6123456789
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/railway
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 #jwt
@@ -143,7 +143,7 @@ vnpay.formatDate=yyyyMMddHHmmss
 
 #Report
 report.createBy=HoangSonHa
-
+report.path=classpath:user.jrxml
 
 #Excel
 excel.sheetName=Th\u00F4ng tin ng\u01B0\u1EDDi d\u00F9ng
