--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=SWP391
 
+spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
+spring.datasource.username=diamondshop
+spring.datasource.password=Group6123456789
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/diamondlocal
+#spring.datasource.username=root
+#spring.datasource.password=Nghia_2003
 #spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
 #spring.datasource.username=diamondshop
 #spring.datasource.password=Group6123456789
