--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=SWP391
 
-#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
-#spring.datasource.username=diamondshop
-#spring.datasource.password=Group6123456789
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/railway
-spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
+spring.datasource.username=diamondshop
+spring.datasource.password=Group6123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/railway
+#spring.datasource.username=root
+#spring.datasource.password=123456789
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 
 #jwt
@@ -158,5 +158,8 @@ crawl.data.elementIDSearch=APjFqb
 crawl.data.elementGetText=//span[@class='DFlfde SwHCTb']
 
 
+
+
+#Group6123
 
 #logging.level.root=DEBUG
