Sơn Hà [UPDATE] config firebase to upload image and change avatar for user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 spring.application.name=SWP391
 
-spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
-spring.datasource.username=diamondshop
-spring.datasource.password=Group6123456789
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/railway
-#spring.datasource.username=root
-#spring.datasource.password=123456789
+#spring.datasource.url=jdbc:mysql://diamondshop.mysql.database.azure.com:3306/railway
+#spring.datasource.username=diamondshop
+#spring.datasource.password=Group6123456789
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/railway
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 
 #jwt
@@ -27,6 +27,28 @@ swagger.scheme=Bearer
 swagger.format=JWT
 swagger.dev.url=http://localhost:8080/
 swagger.pro.url=https://diamondshopproject.azurewebsites.net/
+
+
+# firebase
+firebase.bucket.name=swp391-f046d.appspot.com
+firebase.content.type=image/png
+firebase.get.stream=swp391-f046d-firebase-adminsdk-drdyq-bc797fce80.json
+firebase.get.url=https://firebasestorage.googleapis.com/v0/b/swp391-f046d.appspot.com/o/%s?alt=media
+firebase,get.folder=1
+firebase.file.format=.png
+
+# BufferedImage
+bufferImage.type=png
+bufferImage.fillRect.width=200
+bufferImage.fillRect.height=200
+bufferImage.fillRect.color.background=#ff793f
+bufferImage.fillRect.color.text=#05c46b
+bufferImage.fillRect.font.text=Arial
+bufferImage.fillRect.size.text=100
+bufferImage.fillRect.x=0
+bufferImage.fillRect.y=0
+bufferImage.devide=2
+
 
 
 #job run
