--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ swagger.pro.url=https://diamondshopproject.azurewebsites.net/
 # firebase
 firebase.bucket.name=swp391-f046d.appspot.com
 firebase.content.type=image/png
-firebase.get.stream=swp391-f046d-firebase-adminsdk-drdyq-bc797fce80.json
+firebase.get.stream=swp391-f046d-firebase-adminsdk-drdyq-6dc6c24b5a.json
 firebase.get.url=https://firebasestorage.googleapis.com/v0/b/swp391-f046d.appspot.com/o/%s?alt=media
 firebase,get.folder=1
 firebase.file.format=.png
@@ -49,7 +49,8 @@ bufferImage.fillRect.x=0
 bufferImage.fillRect.y=0
 bufferImage.devide=2
 
-
+# Time login failed reset
+time.reset=300
 
 #job run
 job.first.hour=11
